--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,14 @@ body {
   padding: 0 3.2rem;
   background-color: var(--color-primary);
   border-radius: 0.9rem;
+
+  @media only screen and (max-width: 670px) {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    gap: 2rem;
+    padding: 1rem;
+  }
 }
 
 .logo {
@@ -104,6 +112,12 @@ body {
   display: flex;
   gap: 2.4rem;
   justify-content: center;
+
+  @media only screen and (max-width: 670px) {
+    flex-direction: column-reverse;
+    justify-content: normal;
+    height: auto;
+  }
 }
 
 
@@ -113,11 +127,16 @@ body {
 
 .box {
   width: 42rem;
-  max-width: 42rem;
+  /* max-width: 42rem; */
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
   overflow: scroll;
   position: relative;
+
+  @media only screen and (max-width:670px) {
+    width: auto;
+    min-height: 5rem;
+  }
 }
 
 .loader {
@@ -198,6 +217,10 @@ body {
   list-style: none;
   padding: 0.8rem 0;
   overflow: scroll;
+
+  @media only screen and (max-width:670px) {
+    padding: 0;
+  }
 }
 
 .list-watched {
